--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "axios": "^0.21.1",
     "firebase": "^8.9.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
